name:                srvr
version:             1.0.0.0
license-file:        LICENSE
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable server
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9,
                       optparse-applicative >= 0.11,
                       scotty >= 0.10,
                       transformers >= 0.4,
                       text >= 1.2
  default-language:    Haskell2010
